# iDSP

./: .gitignore  .gitmodules  CMakeLists.txt  compile  run-tests
include/idsp/: antialias.hpp  filter.hpp  maths.hpp  trig.hpp  types.hpp
test/: antialias.cpp  filter.cpp  maths.cpp  trig.cpp
